--- a/files/frontend/package.json
+++ b/files/frontend/package.json
@@ -53,8 +53,10 @@
     "lolex": "^1.4.0",
     "mocha": "^2.4.5",
     "nightwatch": "^0.8.18",
+    "node-sass": "^3.10.1",
     "ora": "^0.2.0",
     "phantomjs-prebuilt": "^2.1.3",
+    "sass-loader": "^4.0.2",
     "selenium-server": "2.53.0",
     "shelljs": "^0.6.0",
     "sinon": "^1.17.3",
@@ -64,7 +66,7 @@
     "vue-html-loader": "^1.0.0",
     "vue-loader": "^8.3.0",
     "vue-style-loader": "^1.0.0",
-    "webpack": "^1.12.2",
+    "webpack": "^1.13.3",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.6.0",
     "webpack-merge": "^0.8.3"
