--- a/files/frontend/package.json
+++ b/files/frontend/package.json
@@ -16,10 +16,10 @@
     "babel-runtime": "^6.0.0"
   },
   "devDependencies": {
-    "babel-core": "^6.0.0",
-    "babel-loader": "^6.0.0",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
     "babel-plugin-transform-runtime": "^6.0.0",
-    "babel-preset-es2015": "^6.0.0",
+    "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-2": "^6.0.0",
     "chai": "^3.5.0",
     "chromedriver": "^2.21.2",
@@ -27,7 +27,8 @@
     "cross-spawn": "^2.1.5",
     "css-loader": "^0.23.0",
     "eslint": "^2.0.0",
-    "eslint-config-standard": "^5.1.0",
+    "eslint-config-semistandard": "^7.0.0",
+    "eslint-config-standard": "^5.3.5",
     "eslint-friendly-formatter": "^1.2.2",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-html": "^1.3.0",
