Add more Python versions into .travis.yml.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,21 @@
 language: python
 sudo: false
 
+# https://docs.travis-ci.com/user/languages/python/
 python:
+    # Django 1.10 requires Python 2.7, 3.4, or 3.5.
+    # https://docs.djangoproject.com/en/1.10/releases/1.10/
+    - "2.7"
     - "3.4"
     - "3.5"
-    - "3.5.2"
+    - "3.5-dev"
+    - "3.6-dev"
+    - "nightly"
+
+matrix:
+    allow_failures:
+        - python: "2.7"  # Will (probably) be deprecated in 2020, so ...
+        - python: "nightly"
 
 before_install:
     - cp example.env .env
