Add pytest as testing framework.
Use with pytest-django and pytest-cov.

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,11 +21,11 @@ before_install:
     - cp example.env .env
 
 install:
-    - pip install -r requirements.txt
+    - pip install -r requirements.txt -r requirements/dev.txt
 
 before_script:
     # Make sure the version of the dependent packages are correct on Travis CI.
     - pip freeze
 
 script:
-    - python manage.py test
+    - pytest
